--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
         env_file:
             -   .env
         environment:
-            MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_USER: ${DB_USERNAME}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_DATABASE: dbAPI
+            MYSQL_USER: laravel
+            MYSQL_PASSWORD: laravel
             MYSQL_ROOT_PASSWORD: root
         volumes:
             - ./db:/var/lib/mysql
